--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -4,17 +4,17 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CameraActivity">
+        <activity android:name=".CameraActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ResultsActivity" />
+        <activity android:name=".ResultsActivity" android:screenOrientation="portrait"/>
 
 
         <provider
@@ -27,14 +27,14 @@
                 android:resource="@xml/paths" />
         </provider>
 
-        <activity android:name=".RashSymptom" />
-        <activity android:name=".AutoSymptom" />
-        <activity android:name=".BumpsSymptom" />
-        <activity android:name=".DrynessSymptom" />
-        <activity android:name=".ItchSymptom" />
-        <activity android:name=".PainSymptom" />
-        <activity android:name=".RednessSymptom" />
-        <activity android:name=".StiffSymptom" />
+        <activity android:name=".RashSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".AutoSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".BumpsSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".DrynessSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".ItchSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".PainSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".RednessSymptom" android:screenOrientation="portrait"/>
+        <activity android:name=".StiffSymptom" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
